<resources>
    <string name="app_name">Tal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="granted">Please Click Continue To Proceed To The Admin Page</string>
    <string name="denied">You Do Not Have The Admin Previledges To Access This Page.</string>
    <string name="about">This App was developed to help digitize the process of meter readings in the field.</string>
    <string name="DateUpdated">February 2020</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="description">Description</string>
    <string name="last_update">Last Update</string>
    <string name="app_version">App Version</string>
    <string name="privacy_policy_info">
        By using this Application, you agree to the <a href="http://dream-space.web.id/">Terms and Conditions</a>,the <a href="http://dream-space.web.id/">Privacy-Policy</a>
        and consent to having your personal data being used to access the efficiency of this Application.
    </string>

</resources>
