<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/tal"
                    app:civ_border="true"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />



                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/app_version"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="1.0.0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/lastupdated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/last_update"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/dateofupdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/DateUpdated"
                    android:textSize="15sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

            </LinearLayout>
            <TextView
                android:id="@+id/abb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/description"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium"
                android:autoLink="web"
                android:text="@string/about"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/terms_of_services"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/spacing_large"
                android:textColor="@color/colorPrimary"
                app:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/privacy_policy"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                app:fontFamily="sans-serif-medium" />

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>